# geo_analyzer-main

geo_analyzer-main/: .env.example  .gitignore  CHANGELOG.md  README.md  build.spec  build_exe.bat  gui.py  main.py  pyproject.toml  requirements.txt  ИНСТРУКЦИЯ_ПОЛЬЗОВАТЕЛЯ.txt
geo_analyzer-main/config/: config.yaml  logging.yaml
geo_analyzer-main/docs/: CLEANUP_AND_DELETE.md  DGIS_ALL_OFFICIAL_RUBRICS.md  DGIS_CATALOG_PREFLIGHT.md  DGIS_KEY_DIAGNOSTICS.md  architecture.md  changelog.md  data_sources.md  formulas_and_mechanics.md  metrics.md  parking_and_2gis_roadmap.md
geo_analyzer-main/reports/templates/: report_structure.md
geo_analyzer-main/scripts/: batch_analysis.py  build_windows.ps1  clean_repository.ps1  cleanup_safe.ps1  run_analysis.py  run_gui.ps1  run_tests.ps1
geo_analyzer-main/src/geo_analyzer/: __init__.py
geo_analyzer-main/tests/: conftest.py
geo_analyzer-main/tests/integration/: test_pipeline_osm.py
geo_analyzer-main/tests/unit/: test_anti_driver_poi_only.py  test_categories.py  test_competition.py  test_deduplication.py  test_dgis_catalog_refresh_ui.py  test_dgis_category_catalog_refresh.py  test_dgis_places_catalog_loader.py  test_environment_quality_accessibility.py  test_excel_structure.py  test_gui_paths.py  test_isochrones.py  test_parking_supply.py  test_parking_supply_v21_patch.py  test_parking_supply_v22_filters.py  test_parking_supply_v23_filters.py  (+5 more)
geo_analyzer-main/tools/: 2gis_rubric_candidates.yaml  2gis_rubric_map.yaml  build_2gis_rubrics.py  check_2gis_directions_api.py  check_2gis_traffic_api.py  discover_2gis_rubrics.py
(+91 files in other folders)
